# data-generation

./: .gitignore  README.md  pyproject.toml
configs/: model_configs_example.json
data_generation/: app.py
data_generation/apps/: chat_app.py  instruct_app.py
data_generation/examples/: instruct_examples.py
data_generation/pipelines/: instruct_pipeline.py
data_generation/prompts/: prompts.py
data_generation/utils/: utils.py
