[tool.poetry]
name = "data-generation"
version = "0.1.0"
description = ""
authors = ["ShearmanChua <shearman_chua@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
gradio = {extras = ["oauth"], version = "^5.16.0"}
pypdf2 = "^3.0.1"
docling = "^2.22.0"
openai = "^1.63.0"
black = "^25.1.0"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
